fix(login): improve input styles for dark mode

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -19,3 +19,8 @@ html { overflow-y: auto; }
     border-radius: 10px;
     /* border: 3px solid #ffffff; */
   }
+
+  input:-webkit-autofill {
+  box-shadow: 0 0 0px 1000px #fff inset !important; /* fundo escuro */
+  -webkit-text-fill-color: #202020 !important; /* texto claro */
+}
